[package]
name = "rspack_style"
version = "0.1.14"
edition = "2021"
license = "MIT"
repository = "https://github.com/zhusjfaker/rust-less.git"
keywords = ["style", "less", "css", "rust-toolkit"]
readme = "../../readme.md"
description = "a rust toolkit bundled for front-end style files"
include = [
    "**/*.rs",
    "js-lib/**/*.js",
    "js-lib/*.js",
    "js-lib/**/*.js.map",
    "Cargo.toml",
]

[dependencies]
regex = "1.5.4"
serde = { version = "1.0.133", features = ["derive", "rc"] }
serde_json = "1.0.74"
fasteval = "0.2.4"
uuid = { version = "1.0.0", features = ["serde", "v4", "fast-rng"] }
strum = { version = "0.23", features = ["derive"] }
tempfile = "3.3.0"
smol_str = "0.1.23"


[dev-dependencies]
derivative = "2.2.0"
tokio = { version = "1.15.0", features = ["full"] }
futures = "0.3.19"
criterion = "0.3.5"

[[bench]]
name = "arco"
harness = false

[[bench]]
name = "parse"
harness = false

[lib]
bench = false
